# spur

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: publish.yml
design/: language.md
editors/code/: .vscodeignore  package-lock.json  package.json
editors/code/src/: extension.ts
editors/code/syntaxes/: spur.tmLanguage.json
specs/: VR.spur  concurrency.spur  locks.spur  simple.pike  simple.spur  structs.spur  sync.spur  variants.spur
spur-cli/: Cargo.toml
spur-cli/src/: main.rs
spur-core/: Cargo.toml
spur-core/specs/: concurrency.spur  free_functions.spur  simple.spur  structs.spur  sync.spur  variants.spur
spur-core/src/: analysis.rs  compiler.rs  debug.rs  lexer.rs  lib.rs  liquid.rs  parser.rs  simulator.rs
spur-core/src/analysis/: checker.rs  format.rs  resolver.rs  trivially_copyable.rs  type_id.rs  types.rs
spur-core/src/analysis/checker/: test.rs
spur-core/src/analysis/resolver/: test.rs
spur-core/src/analysis/trivially_copyable/: test.rs
spur-core/src/analysis/type_id/: test.rs
spur-core/src/compiler/: anf.rs  cfg.rs  lowered.rs  pure.rs  threaded.rs
spur-core/src/compiler/anf/: ast.rs  lower.rs  test.rs
spur-core/src/compiler/cfg/: ast.rs  ir.rs  test.rs
spur-core/src/compiler/lowered/: ast.rs  remove_loops.rs  test.rs
spur-core/src/compiler/pure/: lower.rs  print.rs  test.rs
spur-core/src/compiler/pure/print/: test.rs
spur-core/src/compiler/threaded/: lower.rs  test.rs
spur-core/src/lexer/: format.rs
spur-core/src/liquid/: core.rs
spur-core/src/liquid/core/: ast.rs  builtins.rs  lower.rs  mod.rs  refinement.rs
spur-core/src/liquid/pure/: ast.rs
spur-core/src/liquid/threaded/: ast.rs  from_lowered.rs
spur-core/src/parser/: format.rs
spur-core/src/simulator/: checker.rs  core.rs  coverage.rs  explorer.rs  hash_utils.rs  history.rs  path.rs  plan_config.rs
spur-core/src/simulator/checker/: state.rs
spur-core/src/simulator/core/: error.rs  eval.rs  exec.rs  partition.rs  queue_selector.rs  scheduler.rs  state.rs  values.rs
spur-core/src/simulator/core/exec/: test.rs
spur-core/src/simulator/path/: generator.rs  plan.rs
spur-core/src/visualization/: cfg.rs  coverage.rs
spur-core/tests/: compiler_integration.rs  refinement_types.rs
spur-lsp/: Cargo.toml
spur-lsp/src/: backend.rs  convert.rs  diagnostics.rs  main.rs
src/: analysis.rs  compiler.rs  debug.rs  lexer.rs  lib.rs  main.rs  parser.rs  simulator.rs  visualization.rs
src/analysis/: checker.rs  format.rs  resolver.rs  trivially_copyable.rs  type_id.rs  types.rs
src/analysis/checker/: test.rs
src/analysis/resolver/: test.rs
src/analysis/trivially_copyable/: test.rs
src/compiler/: cfg.rs
src/compiler/cfg/: test.rs
src/lexer/: format.rs
src/simulator/: checker.rs  core.rs  coverage.rs  environment.rs  execution.rs  explorer.rs  generator.rs  hash_utils.rs  history.rs  path.rs  plan.rs  plan_config.rs
src/simulator/checker/: state.rs
src/simulator/core/: error.rs  eval.rs  exec.rs  scheduler.rs  (+2 more)
src/visualization/: cfg.rs
tests/: compiler_integration.rs
xtask/src/: main.rs
(+3 files in other folders)
