[package]
name = "spur"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
codespan-reporting = "0.13.0"
chumsky = "0.11.1"
log = "0.4"
phf = "0.13.1"
phf_macros = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
rand = "0.9.0"
csv = "1.4.0"
rusqlite = { version="0.38.0", features = ["bundled"] }
env_logger = "0.11.8"
imbl = "6.1.0"
rayon = "1.11.0"
rustc-hash = "2.1.1"
