[package]
name = "spur"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
codespan-reporting = "0.13.0"
chumsky = "0.12.0"
log = "0.4"
phf = "0.13.1"
phf_macros = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
rand = "0.9.0"
csv = "1.4.0"
rusqlite = { version="0.38.0", features = ["bundled"] }
env_logger = "0.11.8"
imbl = "6.1.0"
rayon = "1.11.0"
crossbeam = "0.8.4"
ecow = { version = "0.2.6", features = ["serde"] }
dashmap = "6.1.0"
petgraph = "0.8.3"
scalable_cuckoo_filter = "0.5.1"
nauty-pet = "0.14.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
include_dir = "0.7"