[package]
name = "spur-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "spur"
path = "src/main.rs"

[dependencies]
spur-core = { path = "../spur-core", features = ["simulator"] }
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
env_logger = "0.11.8"
ctrlc = "3.4"
serde_json = "1.0"
