[package]
name = "spur-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["simulator"]
simulator = [
    "dep:parquet",
    "dep:arrow",
    "dep:rayon",
    "dep:crossbeam",
    "dep:rand",
    "dep:rand_distr",
    "dep:imbl",
    "dep:dashmap",
    "dep:petgraph",
    "dep:scalable_cuckoo_filter",
    "dep:nauty-pet",
    "dep:ctrlc",
    "dep:csv",
]

[dependencies]
# Core (always)
anyhow = "1.0.100"
ariadne = "0.4.1"
chumsky = "0.12.0"
log = "0.4"
phf = "0.13.1"
phf_macros = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
ecow = { version = "0.2.6", features = ["serde"] }

# Simulator (feature-gated)
arrow = { version = "58.0.0", optional = true }
parquet = { version = "58.0.0", optional = true }
rayon = { version = "1.11.0", optional = true }
crossbeam = { version = "0.8.4", optional = true }
rand = { version = "0.9.0", optional = true }
rand_distr = { version = "0.5", optional = true }
imbl = { version = "6.1.0", optional = true }
dashmap = { version = "6.1.0", optional = true }
petgraph = { version = "0.8.3", optional = true }
scalable_cuckoo_filter = { version = "0.5.1", optional = true }
nauty-pet = { version = "0.14.0", optional = true }
ctrlc = { version = "3.4", optional = true }
csv = { version = "1.4.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
include_dir = "0.7"
proptest = "1.9.0"
